--- a/Desafio03/index.html
+++ b/Desafio03/index.html
@@ -47,6 +47,28 @@
                 <td>9.5</td>
                 <td>8.0</td>
             </tr>
+            <tr>
+                <th colspan="4">Média de Exatas</th>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <th rowspan="2">Humanas</th>
+                <td>História</td>
+                <td>7.5</td>
+                <td>8.0</td>
+                <td>9.0</td>
+            </tr>
+            <tr>
+                <td>Geografia</td>
+                <td>7.5</td>
+                <td>9.0</td>
+                <td>8.0</td>
+            </tr>
+            
+            <tr>
+                <th colspan="4">Média de Humanas</th>
+                <td>0.0</td>
+            </tr>
         </tbody>
     </table>
 </body>
